# Aqua-blue-pdf-reporting

./: .gitignore  .gitmodules  Dockerfile.dockerfile  README.MD  combined.html  combinedTest.py  createPDF.py  fullProcess.py  index.html  myStyles.css  pyproject.toml
.github/workflows/: generateDocs.yml
