[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["submodule"]

[project]
name = "aqua-blue-pdf-reporting"
dynamic = ["version"]
description = "PDF reporting for aqua-blue"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Jackson Henry", email = "jackson.henry@ccmc.global" }]
keywords = [
    "pdf",
    "reporting"
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=2.0,<2.2",
    "tzdata~=2025.1",
    "python-dateutil~=2.9.0.post0",
    "aqua-blue"
]

[project.urls]
Homepage = "https://github.com/jhenry77/Aqua-blue-pdf-reporting"

[project.optional-dependencies]
dev = [
    "pytest~=8.0.2",
    "ruff~=0.9.4",
    "mypy~=1.13.0",
    "pdoc~=15.0.1",
    "types-python-dateutil~=2.9.0.20241206",
    "coverage~=7.8.0",
    "requests~=2.32.2",

]
